@@ -1,3 +1,9 @@
+2021-02-04  Nick Alcock  <nick.alcock@oracle.com>
+
+	* configure.ac (SHARED_LIBADD): Remove explicit -lintl population in
+	favour of LIBINTL.
+	* configure: Regenerated.
+
 2021-02-04  Nelson Chu  <nelson.chu@sifive.com>
 
 	* riscv-opc.c (MASK_RVB_IMM): Removed.
